--- a/blog_app/templates/blog_app/index.html
+++ b/blog_app/templates/blog_app/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load thumbnail %}
 
 {% block page_title %}
     <h2>Blog Posts</h2>
@@ -7,6 +8,12 @@
 {% block page_content %}
     {% block posts %}
         {% for post in posts %}
+
+            {% if post.image %}
+            {% thumbnail post.image "300x200" crop="center" as im %}
+                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+            {% endthumbnail %}
+            {% endif %}
             <h3><a href="{% url 'blog_detail' post.pk %}">{{ post.title }}</a></h3>
             <small>
                 {{ post.created_on.date }} | Categories:
