--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="utf-8">
     <title>My Personal Blog</title>
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
-<body>
+
+
+<body class="container my-4">
+
+
 <h1>My Personal Blog</h1>
 <a href="{% url "blog_index" %}">Home</a>
 <hr>
 {% block page_title %}{% endblock page_title %}
 {% block page_content %}{% endblock page_content %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
