--- a/blog_app/templates/blog_app/detail.html
+++ b/blog_app/templates/blog_app/detail.html
@@ -1,40 +1,63 @@
-<!--  blog/templates/blog/detail.html -->
 {% extends "base.html" %}
-{% block page_title %}
-    <h2>{{ post.title }}</h2>
-{% endblock page_title %}
 {% load thumbnail %}
 
 {% block page_content %}
-    <small>
-        <!-- ... -->
-    </small>
+
+    <!-- Post Title -->
+    <div class="post-title mb-4">
+        <h1>{{ post.title }}</h1>
+    </div>
+
+    <!-- Post Meta Information -->
+    <div class="post-meta mb-4">
+        <small>Opublikowano {{ post.created_on.date }} | Kategorie:
+            {% for category in post.categories.all %}
+                <a href="{% url 'blog_category' category.name %}" class="badge badge-secondary">{{ category.name|upper }}</a>
+            {% endfor %}
+        </small>
+    </div>
+
+    <!-- Post Image -->
     {% if post.image %}
-    {% thumbnail post.image "1200x1000" as im %}
-        <img src="{{ im.url }}" class="img-fluid" alt="{{ post.title }}">
-    {% endthumbnail %}
+    <div class="post-image mb-4">
+        {% thumbnail post.image "1200x1000" as im %}
+            <img src="{{ im.url }}" class="img-fluid rounded" alt="{{ post.title }}">
+        {% endthumbnail %}
+    </div>
     {% endif %}
-    <p>{{ post.body | linebreaks }}</p>
 
-    <h3>Leave a comment:</h3>
-    <form method="post">
-        {% csrf_token %}
-        <div>
-            {{ form.author }}
-        </div>
-        <div>
-            {{ form.body }}
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    <!-- Post Content -->
+    <div class="post-body mb-4 text-justify">
+        <p>{{ post.body | linebreaks }}</p>
+    </div>
 
-    <h3>Comments:</h3>
-    {% for comment in comments %}
-        <p>
-            On {{ comment.created_on.date }} <b>{{ comment.author }}</b> wrote:
-        </p>
-        <p>
-            {{ comment.body | linebreaks }}
-        </p>
-    {% endfor %}
+    <!-- Comment Form -->
+    <div class="comment-form mb-5">
+        <h4>Zostaw komentarz:</h4>
+        <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="id_author">Imię:</label>
+                {{ form.author }}
+            </div>
+            <div class="form-group">
+                <label for="id_body">Komentarz:</label>
+                {{ form.body }}
+            </div>
+            <button type="submit" class="btn btn-primary">Zapisz</button>
+        </form>
+    </div>
+
+    <!-- Comments Section -->
+    <div class="comments-section">
+        <h3>Komentarze:</h3>
+        {% for comment in comments %}
+            <div class="comment mb-4 p-3 border rounded">
+                <small class="text-muted">{{ comment.created_on.date }} przez <strong>{{ comment.author }}</strong>:</small>
+                <p>{{ comment.body | linebreaks }}</p>
+            </div>
+        {% empty %}
+            <p>Brak komentarzy, zacznij dyskusję już teraz!</p>
+        {% endfor %}
+    </div>
 {% endblock page_content %}
