--- a/blog_app/templates/blog_app/index.html
+++ b/blog_app/templates/blog_app/index.html
@@ -1,29 +1,35 @@
 {% extends "base.html" %}
 {% load thumbnail %}
 
-{% block page_title %}
-    <h2>Blog Posts</h2>
-{% endblock page_title %}
-
 {% block page_content %}
     {% block posts %}
-        {% for post in posts %}
-
-            {% if post.image %}
-            {% thumbnail post.image "300x200" crop="center" as im %}
-                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-            {% endthumbnail %}
-            {% endif %}
-            <h3><a href="{% url 'blog_detail' post.pk %}">{{ post.title }}</a></h3>
-            <small>
-                {{ post.created_on.date }} | Categories:
-                {% for category in post.categories.all %}
-                    <a href="{% url 'blog_category' category.name %}">
-                        {{ category.name }}
-                    </a>
-                {% endfor %}
-            </small>
-            <p>{{ post.body | slice:":400" }}...</p>
-        {% endfor %}
+        <div class="row">
+            {% for post in posts %}
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        {% if post.image %}
+                            {% thumbnail post.image "300x200" crop="center" as im %}
+                                <img src="{{ im.url }}" class="card-img-top" alt="{{ post.title }}" width="{{ im.width }}" height="{{ im.height }}">
+                            {% endthumbnail %}
+                        {% endif %}
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <a href="{% url 'blog_detail' post.pk %}">{{ post.title }}</a>
+                            </h5>
+                            <small class="text-muted">
+                                {{ post.created_on.date }} | Kategorie:
+                                {% for category in post.categories.all %}
+                                    <a href="{% url 'blog_category' category.name %}">
+                                        {{ category.name }}
+                                    </a>{% if not forloop.last %}, {% endif %}
+                                {% endfor %}
+                            </small>
+                            <p class="card-text text-justify">{{ post.body | slice:":400" }}...</p>
+                            <a href="{% url 'blog_detail' post.pk %}" class="btn btn-primary">Czytaj więcej</a>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
     {% endblock posts %}
 {% endblock page_content %}
