--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
-    <meta charset="utf-8">
-    <title>My Personal Blog</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Świat planszówek</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
+<body>
 
+<!-- Nagłówek -->
+<header class="bg-dark text-white p-4">
+    <div class="container text-center">
+        <h1><a href="{% url 'blog_index' %}" class="text-white">Świat planszówek</a></h1>
+    </div>
+</header>
+<!--
+wstaw tu logo, mam plik w formacie jpg
+1024x768
+-->
+<!-- Nawigacja -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" href="{% url 'blog_index' %}">Strona Główna</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                {% for category in categories %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'blog_category' category.name %}">{{ category.name|upper }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</nav>
 
-<body class="container my-4">
+<!-- Główna zawartość -->
+<div class="container my-4">
+    {% block page_content %}
+    {% endblock %}
+</div>
 
+<!-- Stopka -->
+<footer class="bg-dark text-white py-4 mt-auto">
+    <div class="container text-center">
+        <p>Dominik Borawski &copy; 2025 | Politechnika Gdańska</p>
+    </div>
+</footer>
 
-<h1>My Personal Blog</h1>
-<a href="{% url "blog_index" %}">Home</a>
-<hr>
-{% block page_title %}{% endblock page_title %}
-{% block page_content %}{% endblock page_content %}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Skrypty JS -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
