--- a/templates/base.html
+++ b/templates/base.html
@@ -37,20 +37,17 @@ wstaw tu logo, mam plik w formacie jpg
     </div>
 </nav>
 
-<!-- Główna zawartość -->
 <div class="container my-4">
     {% block page_content %}
     {% endblock %}
 </div>
 
-<!-- Stopka -->
 <footer class="bg-dark text-white py-4 mt-auto">
     <div class="container text-center">
-        <p>Dominik Borawski &copy; 2025 | Politechnika Gdańska</p>
+        <p>Dominik Borawski &copy; 2025 | Politechnika Gdańska | <a href="/admin">PANEL ADMINISTRATORA</a></p>
     </div>
 </footer>
 
-<!-- Skrypty JS -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 
